tests/cases/scc/error/0020-storage.c.res
./tests/cases/scc/error/0020-storage.c:43:1:	error:   top-level symbol can not have automatic (stack-allocated) storage duration.
exit code 1
